<resources>
    <string name="app_name">AR-furniture</string>
    <string name="title_activity_furnitures_ar">FurnituresArActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="back_btn_content">back</string>
    <string name="back_btn_desc">go back</string>

    <string name="remove_btn_content">remove</string>
    <string name="remove_btn_desc">delete model</string>

    <string name="item_name">Furniture:</string>


</resources>